{
  "version": 4,
  "terraform_version": "1.10.3",
  "serial": 15,
  "lineage": "c52667b0-a0d0-6bbe-570a-290917484540",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "pro-vpc-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:852559459151:security-group/sg-0a00858aaad0545d0",
            "description": "Managed by Terraform",
            "filter": null,
            "id": "sg-0a00858aaad0545d0",
            "name": "terraform-20250131065211532400000001",
            "tags": {
              "Name": "pro-vpc-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e36e2aac8e5e54e1"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "pro-vpc-prv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:852559459151:subnet/subnet-0168fd3dd4deeb070",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "available_ip_address_count": 251,
            "cidr_block": "10.0.2.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0168fd3dd4deeb070",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "852559459151",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "pro-vpc-prv"
            },
            "vpc_id": "vpc-0e36e2aac8e5e54e1"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "pro-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:852559459151:vpc/vpc-0e36e2aac8e5e54e1",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-07ce05e823eb3fb76",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0c5a7fd6df34c54d2",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e36e2aac8e5e54e1",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c0df209c9639a6c1",
            "owner_id": "852559459151",
            "tags": {
              "Name": "pro-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "pro-vpc-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-053b12d3152c0cc71",
            "arn": "arn:aws:ec2:ap-south-1:852559459151:instance/i-07922ad04bd405754",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07922ad04bd405754",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my ubuntu",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ea46e9f3a7c39e6a",
            "private_dns": "ip-10-0-2-250.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.250",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-034c5821cf1dd55c8",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0168fd3dd4deeb070",
            "tags": {
              "Name": "pro-vpc-ec2"
            },
            "tags_all": {
              "Name": "pro-vpc-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a00858aaad0545d0"
            ]
          },
          "dependencies": [
            "aws_security_group.pro-vpc-sg",
            "aws_subnet.pro-vpc-prv",
            "aws_vpc.pro-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "pro-vpc-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:852559459151:internet-gateway/igw-080991dc2d7327387",
            "id": "igw-080991dc2d7327387",
            "owner_id": "852559459151",
            "tags": {
              "Name": "pro-vpc-igw"
            },
            "tags_all": {
              "Name": "pro-vpc-igw"
            },
            "vpc_id": "vpc-0e36e2aac8e5e54e1"
          },
          "dependencies": [
            "aws_vpc.pro-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pro-vpc-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:852559459151:route-table/rtb-0391c8b31b7dbecf2",
            "id": "rtb-0391c8b31b7dbecf2",
            "owner_id": "852559459151",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-080991dc2d7327387",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pro-vpc-rt"
            },
            "tags_all": {
              "Name": "pro-vpc-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e36e2aac8e5e54e1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.pro-vpc-igw",
            "aws_vpc.pro-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pro-vpc-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bf44a4a2f984d447",
            "route_table_id": "rtb-0391c8b31b7dbecf2",
            "subnet_id": "subnet-0a0800f979b0baf14"
          },
          "dependencies": [
            "aws_internet_gateway.pro-vpc-igw",
            "aws_route_table.pro-vpc-rt",
            "aws_subnet.pro-vpc-pub",
            "aws_vpc.pro-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "pro-vpc-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:852559459151:security-group/sg-0a00858aaad0545d0",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a00858aaad0545d0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20250131065211532400000001",
            "name_prefix": "terraform-",
            "owner_id": "852559459151",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "pro-vpc-sg"
            },
            "tags_all": {
              "Name": "pro-vpc-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e36e2aac8e5e54e1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.pro-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pro-vpc-prv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:852559459151:subnet/subnet-0168fd3dd4deeb070",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0168fd3dd4deeb070",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "852559459151",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pro-vpc-prv"
            },
            "tags_all": {
              "Name": "pro-vpc-prv"
            },
            "vpc_id": "vpc-0e36e2aac8e5e54e1"
          },
          "dependencies": [
            "aws_vpc.pro-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pro-vpc-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:852559459151:subnet/subnet-0a0800f979b0baf14",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a0800f979b0baf14",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "852559459151",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pro-vpc-pub"
            },
            "tags_all": {
              "Name": "pro-vpc-pub"
            },
            "vpc_id": "vpc-0e36e2aac8e5e54e1"
          },
          "dependencies": [
            "aws_vpc.pro-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "pro-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:852559459151:vpc/vpc-0e36e2aac8e5e54e1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05cde897ff2d2d971",
            "default_route_table_id": "rtb-0c0df209c9639a6c1",
            "default_security_group_id": "sg-07bb117923ea93c36",
            "dhcp_options_id": "dopt-0c5a7fd6df34c54d2",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e36e2aac8e5e54e1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c0df209c9639a6c1",
            "owner_id": "852559459151",
            "tags": {
              "Name": "pro-vpc"
            },
            "tags_all": {
              "Name": "pro-vpc"
            }
          }
        }
      ]
    }
  ]
}